<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/scoreboardFragment"
        android:icon="@drawable/ic_scoreboard"
        android:title="@string/scoreboard" />

    <item
        android:id="@+id/newQuestionFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/new_question" />

    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

</menu>